# curriculum-vitae

./: .gitignore  Makefile  README.md  cv.yaml  main.tex  main.tex.j2  pyproject.toml  render.py  work.bib
.github/: .gitignore
.github/workflows/: build-cv.yaml
